--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+server.port = 8088
+
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Для запуска через Docker
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqlserver}/pollsapidb?createDatabaseIfNotExist=true&serverTimezone=UTC
+
+# Для запуска без Docker
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:3306/pollsapidb?createDatabaseIfNotExist=true&serverTimezone=UTC
+
+spring.datasource.username=root
+spring.datasource.password=root
+
+#jwt.header=Authorization
+#jwt.header.prefix=Bearer 
+
 
