--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<scope>test</scope>
+		 </dependency>
+
 		<!--MYSQL -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -94,6 +100,13 @@
         <artifactId>spring-boot-starter-validation</artifactId>
     	</dependency>
 
+		 <!--Flyway	  -->
+		<dependency>
+  			<groupId>org.flywaydb</groupId>
+  			<artifactId>flyway-core</artifactId>
+			  <version>5.2.4</version>
+		</dependency>
+		 
 
 
 	</dependencies>
