--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port = 8088
 
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 # Для запуска через Docker
@@ -14,7 +14,11 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:3306/pollsapidb?creat
 spring.datasource.username=root
 spring.datasource.password=root
 
-#jwt.header=Authorization
-#jwt.header.prefix=Bearer 
+jwt.token.secret=chunarev
+jwt.token.expired=2592000000
+# 1 час 3600000
+
+jwt.header=Authorization
+jwt.header.prefix=Bearer 
 
 
